--- a/app/views/quesitions/index.html.erb
+++ b/app/views/quesitions/index.html.erb
@@ -6,9 +6,10 @@
   <% @quesitions.each do |quesition| %>
     <%= render quesition %>
     <p>
-      <%= link_to "Show this quesition", quesition %>
+    <%= link_to "Show this quesition", quesitions_index_path(quesition) %>
+
     </p>
   <% end %>
 </div>
 
-<%= link_to "New quesition", new_quesition_path %>
+<%= link_to "New quesition",  new_quizo_path %>
