--- a/app/views/quizos/_form.html.erb
+++ b/app/views/quizos/_form.html.erb
@@ -2,7 +2,7 @@
   controller: "nested-form", nested_form_wrapper_selector_value: ".nested-form-wrapper" 
 }) do |form| %>
   <div class="form-group">
-    <label for="quizo_title">Title</label>
+    <label for="quizo_title">Stage</label>
     <%= form.text_field :title, id: "quizo_title", class: "form-control" %>
   </div>
   <div class="form-group">
@@ -20,5 +20,5 @@
 
   <div data-nested-form-target="target"></div>
   <button type="button" data-action="nested-form#add" class="btn btn-secondary mb-3">Add Question</button>
-  <%= form.submit "Submit Quiz", class: "btn btn-primary" %>
+  <%= form.submit "Create Quiz", class: "btn btn-primary" %>
 <% end %>
