Finish 6th milestone

--- a/app/views/quesitions/_quesition.html.erb
+++ b/app/views/quesitions/_quesition.html.erb
@@ -39,8 +39,11 @@
     <%= quesition.image %>
   </p>
 
-  <%= form_with(model: contestant) do |form| %>
+  <%= form_with(model: [@quizo, @contestant, Submission.new], url: submissions_path, local: true) do |form| %>
     <%= form.hidden_field :quesition_id, value: quesition.id %>
     <%= form.submit "Pick Question", class: "btn btn-primary" %>
   <% end %>
-</div>
+  
+  
+  
+  
