--- a/app/views/quesitions/show.html.erb
+++ b/app/views/quesitions/show.html.erb
@@ -1,10 +1,100 @@
-<p style="color: green"><%= notice %></p>
+<p class="alert alert-success"><%= notice %></p>
 
-<%= render @quesition %>
+<div class="card">
+  <div class="card-body">
+    <h3 class="card-title">Question:</h3>
+    <p class="card-text">Question ID: <%= @quesition.id %></p>
+    <p class="card-text">Content: <%= @quesition.content %></p>
 
-<div>
-  <%= link_to "Edit this quesition", edit_quesition_path(@quesition) %> |
-  <%= link_to "Back to quesitions", quesitions_path %>
-
-  <%= button_to "Destroy this quesition", @quesition, method: :delete %>
+    <div id="timer">
+  <span id="timer-text">Time remaining:</span>
+  <span id="timer-counter">60</span> seconds
 </div>
+
+
+<%= form_with(model: @submission, url: submissions_path(quizo_id: @quizo.id, contestant_id: @contestant.id,  quesition_id: @quesition.id), class: "form") do |form| %>
+  <%= form.hidden_field :quesition_id, value: @quesition.id %>
+  <%= form.hidden_field :contestant_id, value: @contestant.id %>
+
+  <% 1.upto(4) do |answer_index| %>
+    <div class="form-check">
+      <%= form.radio_button :selected_answer_id, answer_index %>
+      <%= form.label "answer#{answer_index}", class: "form-check-label" do %>
+        <%= @quesition.send("answer#{answer_index}") %>
+      <% end %>
+    </div>
+  <% end %>
+
+  <%= form.submit "Submit Answer", class: "btn btn-primary" %>
+<% end %>
+
+
+
+
+
+<script>
+var duration = 60;
+var formSubmitted = false;
+var timerId;
+
+// Function to update the timer element
+function updateTimer() {
+  var timerElement = document.getElementById("timer");
+  timerElement.innerHTML = "Time remaining: " + duration + " seconds";
+
+  if (duration === 0 && !formSubmitted) {
+    formSubmitted = true;
+    document.querySelector("form").submit();
+  } else {
+    duration--;
+  }
+}
+
+// Function to handle form submission
+function submitForm() {
+  formSubmitted = true;
+  document.querySelector("form").submit();
+}
+
+// Call the updateTimer function to start the timer and update it every second
+timerId = setInterval(updateTimer, 1000);
+
+// Listen for click event on the submit button
+document.querySelector("input[type='submit']").addEventListener("click", function() {
+  if (!formSubmitted) {
+    submitForm();
+  }
+});
+
+// Listen for form submission event
+document.querySelector("form").addEventListener("submit", function(event) {
+  event.preventDefault(); // Prevent the default form submission
+  submitForm();
+});
+</script>
+
+
+
+
+
+
+
+<style>
+  #timer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  #timer-text {
+    font-weight: bold;
+    margin-right: 5px;
+  }
+
+  #timer-counter {
+    font-weight: bold;
+    color: #ff0000; /* Adjust the color to your preference */
+  }
+</style>
