--- a/app/views/quizos/show.html.erb
+++ b/app/views/quizos/show.html.erb
@@ -1,28 +1,56 @@
+
+
+<%= form_with(model: [@quizo, @contestant], url: quizo_contestants_path(@quizo), class: "form") do |form| %>
+  <div class="form-group">
+    <%= form.label :name %>
+    <%= form.text_field :name, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= form.submit 'Create Contestant', class: "btn btn-primary" %>
+  </div>
+<% end %>
+
 <p style="color: green"><%= notice %></p>
-<%= form_with(url: quizo_submissions_path(@quizo), local: true, method: :post) do |form| %>
-  <% @quizo.quesitions.each_with_index do |quesition, index| %>
+
+<h1>Contestants:</h1>
+<ul>
+<% @quizo.contestants.each do |contestant| %>
+  <li>
+  <%= link_to contestant.name, quizo_contestant_quesitions_path(@quizo, contestant) %>
+
+
+
+
+  </li>
+<% end %>
+
+
+
+</ul>
+
+<% @quizo.quesitions.each do |quesition| %>
+  <% if quesition.available? %>
     <div class="card mb-4">
       <div class="card-body">
-        <h5 class="card-title">Question <%= index + 1 %>:</h5>
-        <p class="card-text"><%= quesition.content %></p>
-        <% if quesition.image.attached? %>
-          <%= image_tag quesition.image, class: "img-fluid mb-3" %>
-        <% end %>
-        <% 1.upto(4) do |answer_index| %>
-          <div class="form-check">
-            <%= form.radio_button "quesition_#{quesition.id}", answer_index, class: "form-check-input" %>
-            <%= form.label "quesition_#{quesition.id}_#{answer_index}", quesition.send("answer#{answer_index}"), class: "form-check-label" %>
-          </div>
-        <% end %>
+        <h5 class="card-title">Question:</h5>
+        <p class="card-text">Question ID: <%= quesition.id %></p>
+        <%= link_to "View Question", view_quizo_quesition_path(@quizo, quesition, submission_id: @submission.id, contestant_id: @contestant.id), class: "btn btn-primary" %>
+
+
+
+
       </div>
     </div>
   <% end %>
-  <div class="text-center">
-    <%= form.submit "Submit Quiz", class: "btn btn-primary" %>
-  </div>
 <% end %>
-<div>
-  <%= link_to "Edit this quiz", edit_quizo_path(@quizo) %> |
-  <%= link_to "Back to quizzes", quizos_path %>
-  <%= button_to "Destroy this quiz", @quizo, method: :delete %>
-</div>
+
+
+
+
+
+
+
+
+
+
