--- a/app/views/quesitions/index.html.erb
+++ b/app/views/quesitions/index.html.erb
@@ -1,13 +1,12 @@
-
-<% @quesitions.each do |quesition| %>
+<% counter = 1 %>
+<% @quizo.quesitions.each do |quesition| %>
   <div class="card mb-4">
     <div class="card-body">
-      <h5 class="card-title">Question:</h5>
-      <p class="card-text">Question ID: <%= quesition.id %></p>
-      <%= link_to "View Question", quizo_contestant_quesition_path(@quizo, @contestant, quesition), class: "btn btn-primary" %>
+      <h5 class="card-title">Question <%= counter %>:</h5>
+      
 
-
-
+      <%= link_to "View Question", view_quizo_quesition_path(@quizo, quesition,  contestant_id: @contestant.id), class: "btn btn-primary" %>
     </div>
   </div>
+  <% counter += 1 %>
 <% end %>
