--- a/app/views/quizos/show.html.erb
+++ b/app/views/quizos/show.html.erb
@@ -25,10 +25,9 @@
   </li>
 <% end %>
 
-
-
 </ul>
 
+<%= link_to 'View Leaderboard', quizo_leaderboard_path(@quizo), class: "btn btn-primary mt-4" %>
 
 
 
