--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -23,5 +23,6 @@
         <strong>No answer submitted for this question.</strong>
       </div>
     <% end %>
+    <%= link_to "Go to Quizo", quizo_path(@submission.quizo), class: "btn btn-primary" %>
   </div>
 </div>
