--- a/app/views/quizos/index.html.erb
+++ b/app/views/quizos/index.html.erb
@@ -13,7 +13,7 @@
         <div class="card-body">
           <%= render quizo %>
           <%= link_to "Start quiz", quizo, class: "btn btn-primary mt-3" %>
-          <%= link_to "Edit quiz", edit_quizo_path(quizo), class: "btn btn-primary mt-3" %>
+          <%= link_to "Edit quiz", edit_quizo_path(quizo), class: "btn btn-warning mt-3" %>
 
           
           
