--- a/app/views/quizos/index.html.erb
+++ b/app/views/quizos/index.html.erb
@@ -22,5 +22,5 @@
     <% end %>
   </div>
 
-  <%= link_to "New quizo", new_quizo_path, class: "btn btn-success" %>
+  <%= link_to "New quiz", new_quizo_path, class: "btn btn-success" %>
 </div>
