--- a/app/views/quizos/index.html.erb
+++ b/app/views/quizos/index.html.erb
@@ -14,6 +14,8 @@
           <%= render quizo %>
           <%= link_to "Start quiz", quizo, class: "btn btn-primary mt-3" %>
           <%= link_to "Edit quiz", edit_quizo_path(quizo), class: "btn btn-warning mt-3" %>
+          <%= link_to 'View Leaderboard', quizo_leaderboard_path(quizo), class: "btn btn-success mt-4" %>
+
 
           
           
