--- a/app/views/quizos/leaderboard.html.erb
+++ b/app/views/quizos/leaderboard.html.erb
@@ -1,4 +1,4 @@
-<h1 class="mt-5">Quizo Leaderboard</h1>
+<h1 class="mt-5">Quiz Leaderboard</h1>
 <table class="table table-striped table-hover mt-4">
   <thead>
     <tr>
