--- a/app/views/quizos/_form.html.erb
+++ b/app/views/quizos/_form.html.erb
@@ -17,5 +17,5 @@
 
   <div data-nested-form-target="target"></div>
   <button type="button" data-action="nested-form#add" class="btn btn-secondary mb-3">Add Question</button>
-  <%= form.submit "Create Quiz", class: "btn btn-primary" %>
+  <%= form.submit "Add Question to Quiz(Bank)", class: "btn btn-primary" %>
 <% end %>
