--- a/app/views/quizos/show.html.erb
+++ b/app/views/quizos/show.html.erb
@@ -15,16 +15,19 @@
 <div class="card mb-3">
   <% @quizo.contestants.each do |contestant| %>
     <div class="card-body">
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="btn-group mr-1">
-          <%= link_to contestant.name, quizo_contestant_quesitions_path(@quizo, contestant), class: "btn mr-1 btn-success btn-oval " %> 
-          <%= link_to "Edit", edit_quizo_contestant_path(@quizo, contestant), class: "btn mr-1 btn-warning btn-oval" %>
+      <div class="d-flex justify-content-between ">
+        <div>
+          <%= link_to contestant.name, quizo_contestant_quesitions_path(@quizo, contestant), class: "btn btn-success btn-oval" %>
         </div>
-        <%= button_to "Remove", remove_contestant_quizo_path(@quizo, contestant), method: :delete, data: { confirm: 'Are you sure you want to remove this contestant?' }, class: "btn btn-danger btn-oval" %>
+        <div>
+          <%= link_to "Edit", edit_quizo_contestant_path(@quizo, contestant), class: "btn btn-warning btn-oval" %>
+        </div>
       </div>
+      <%= button_to "Remove", remove_contestant_quizo_path(@quizo, contestant), method: :delete, data: { confirm: 'Are you sure you want to remove this contestant?' }, class: "btn btn-danger btn-oval mt-2" %>
     </div>
   <% end %>
 </div>
+
 
 
 
