--- a/app/views/quizos/index.html.erb
+++ b/app/views/quizos/index.html.erb
@@ -5,7 +5,7 @@
     </div>
   <% end %>
 
-  <h1 class="mb-4" style="font-family: 'Arial', sans-serif; font-size: 36px; color: #005; text-align: center; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">NMGS IBADAN QUIZ COMPETITION</h1>
+  <h1 class="mb-4" style="font-family: 'Arial', sans-serif; font-size: 36px; color: #ffffff; text-align: center; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">NMGS IBADAN QUIZ COMPETITION</h1>
 
   <div id="quizos">
     <% @quizos.each do |quizo| %>
