--- a/app/views/quesitions/index.html.erb
+++ b/app/views/quesitions/index.html.erb
@@ -5,7 +5,7 @@
     </div>
   <% end %>
 
-  <h1 class="mb-4" style="font-family: 'Arial', sans-serif; font-size: 36px; color: #333; text-align: center; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">NMGS QUIZ IBADAN COMPETITION</h1>
+  <h1 class="mb-4" style="font-family: 'Arial', sans-serif; font-size: 36px; color: #000; text-align: center; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);">NMGS IBADAN QUIZ COMPETITION</h1>
 
   <div class="search-bar">
     <label for="search-input">Search Questions:</label>
@@ -21,8 +21,10 @@
           
           <% if quesition.submitted? %>
             <p>This question has been answered.</p>
+            <%= button_to "Delete Question", quizo_quesition_path(@quizo, quesition), method: :delete, data: { confirm: 'Are you sure you want to delete this question?' }, class: "btn btn-danger" %>
           <% else %>
             <%= link_to "View Question", view_quizo_quesition_path(@quizo, quesition, contestant_id: @contestant.id), class: "btn btn-primary" %>
+            <%= button_to "Delete Question", quizo_quesition_path(@quizo, quesition), method: :delete, data: { confirm: 'Are you sure you want to delete this question?' }, class: "btn btn-danger" %>
           <% end %>
         </div>
       </div>
