--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="/">Quiz App</a>
+    <a class="navbar-brand" href="/">NMGS</a>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <%= link_to "Home", root_path, class: "nav-link" %>
