--- a/app/views/quesitions/index.html.erb
+++ b/app/views/quesitions/index.html.erb
@@ -21,9 +21,10 @@
           
           <% if quesition.submitted? %>
             <p>This question has been answered.</p>
+            <%= button_to "Delete Question", quizo_quesition_path(@quizo, quesition), method: :delete, data: { confirm: 'Are you sure you want to delete this question?' }, class: "btn btn-danger" %>
           <% else %>
             <%= link_to "View Question", view_quizo_quesition_path(@quizo, quesition, contestant_id: @contestant.id), class: "btn btn-primary" %>
-            
+            <%= button_to "Delete Question", quizo_quesition_path(@quizo, quesition), method: :delete, data: { confirm: 'Are you sure you want to delete this question?' }, class: "btn btn-danger" %>
           <% end %>
         </div>
       </div>
@@ -31,7 +32,7 @@
     <% end %>
   </div>
 
-  <%= link_to "New quiz", new_quizo_path, class: "btn btn-success" %>
+  <%= link_to "Add questions", edit_quizo_path(@quizo), class: "btn btn-warning mt-3" %>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
